<resources>
    <string name="app_name">MovieApps</string>
    <string name="title_movie">Movies</string>
    <string name="title_tvshow">TV Shows</string>
    <string name="title_favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="year">year</string>
    <string name="description">description</string>
    <string name="vote">Vote Count</string>
    <string name="language">language</string>
    <string name="score">score</string>
    <string name="overview">Overview</string>
    <string name="image_poster">image poster path content</string>
</resources>