<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="id.ajiguna.movieapps.ui.movies.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="id.ajiguna.movieapps.ui.tvshows.TVShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshows" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.ajiguna.movieapps.ui.favorites.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" />
</navigation>